--- a/shared/latex/mlops/modeling/compression/lora.tex
+++ b/shared/latex/mlops/modeling/compression/lora.tex
@@ -1,16 +1,16 @@
 \begin{frame}{Qu'est-ce que LoRA~?}
   \begin{itemize}
-    \item Méthode de finetuning de réseaux de neurones
-    \item Permet de réduire la taille des modèles finetunés
-    \item Réduit le potentiel théorique du finetuning
-    \item Très adaptée quand un gros modèle original doit être finetuné de nombreuses fois
+    \item Méthode de peaufinage (\textit{finetuning}) de réseaux de neurones
+    \item Permet de réduire la taille des modèles peaufinés
+    \item Réduit le potentiel théorique du peaufinage
+    \item Très adaptée quand un gros modèle original doit être peaufiné de nombreuses fois
   \end{itemize}
 \end{frame}
 
 \begin{frame}{Méthode}
   \begin{itemize}
-    \item Finetuning additif (ajout du résultat du finetuning aux poids de base)
-    \item Factorisation des matrices de poids ($W$ est finetunée en $A \times B$)
+    \item Peaufinage additif (ajout du résultat du peaufinage aux poids de base)
+    \item Factorisation des matrices de poids ($W$ est peaufinée en $A \times B$)
     \item Si l'on part d'une $W$ de taille $1000 \times 1000$, on peut prendre $A$ \& $B$ de tailles $1000 \times 5$ et $5 \times 1000$ par exemple
     \item $W$ a $1\,000\,000$ de paramètres, $A$ \& $B$, $10\,000$
     \item Le résultat est $W' = W + A \times B$
@@ -18,14 +18,14 @@
 \end{frame}
 
 \begin{frame}{Illustration de la méthode}
-  \V{"img/mlops/technics/compression/lora" | image("th", 0.6)}
+  \V{"img/mlops/modeling/compression/lora" | image("th", 0.6)}
 \end{frame}
 
 \begin{frame}{Intérêt}
-  Si on finetune beaucoup de fois le modèle original~:
+  Si on peaufine beaucoup de fois le modèle original~:
   \begin{itemize}
     \item Le modèle original n'est stocké qu'une fois
-    \item Chaque finetuning nécessite seulement de stocker les petites matrices ($A$ \& $B$)
+    \item Chaque peaufinage nécessite seulement de stocker les petites matrices ($A$ \& $B$)
     \item Pas de surcoût d'exécution à l'inférence~: on peut calculer $W' = W + A \times B$ à l'initialisation du modèle
   \end{itemize}
 \end{frame}
@@ -39,5 +39,5 @@
 \end{frame}
 
 \begin{frame}{Pour aller plus loin}
-  \bluelink{https://keras.io/examples/nlp/parameter\_efficient\_finetuning\_of\_gpt2_with\_lora/}{Codelab de mise en place de LoRA avec Keras 3}
+  \bluelink{https://keras.io/examples/nlp/parameter\_efficient\_finetuning\_of\_gpt2_with\_lora/}{Code de mise en place de LoRA avec Keras 3}
 \end{frame}
