--- a/shared/latex/mlops/modeling/compression/quantization.tex
+++ b/shared/latex/mlops/modeling/compression/quantization.tex
@@ -1,4 +1,4 @@
-\begin{frame}{Qu'est-ce que la quantization~?}
+\begin{frame}{Qu'est-ce que la quantification (\textit{quantization})~?}
   \begin{itemize}
     \item Modification des ensembles utilisés pour définir les poids et opérations
     \item Projection d'un grand espace vers un espace plus petit
@@ -16,19 +16,19 @@
 \end{frame}
 
 \begin{frame}{Techniques}
-  Les techniques de quantization diffèrent en fonction des familles de modèles.
+  Les techniques de quantification diffèrent en fonction des familles de modèles.
 
-  Ici nous parlerons des réseaux de neurones car ce sont les modèles qui ont le plus besoin d'être quantizés.
+  Ici nous parlerons des réseaux de neurones car ce sont les modèles qui en ont le plus besoin.
 \end{frame}
 
 \begin{frame}{Deux écoles}
   \begin{itemize}
-    \item Quantization après l'entraînement
-    \item Entraînement adapté à la quantization
+    \item Quantification après l'entraînement
+    \item Entraînement adapté à la quantification
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Quantization après l'entraînement}
+\begin{frame}{Quantification après l'entraînement}
   \begin{itemize}
     \item Entraînement normal du modèle
     \item Étape de post-traitement qui transforme les float32 en float16 ou int8
@@ -38,12 +38,12 @@
 \end{frame}
 
 \begin{frame}{Implémentation}
-  Utilisation de \texttt{tf.lite.TFLiteConverter} avec option de quantization.
+  Utilisation de \texttt{tf.lite.TFLiteConverter} avec option de quantification.
 \end{frame}
 
-\begin{frame}{Entraînement adapté à la quantization}
+\begin{frame}{Entraînement adapté à la quantification}
   \begin{itemize}
-    \item Le graphe du réseau de neurone est augmenté avec des nœuds de quantization pendant l'entraînement
+    \item Le graphe du réseau de neurone est augmenté avec des nœuds de quantification pendant l'entraînement
     \item Demande de modifier légèrement le code d'entraînement
     \item Détériore souvent beaucoup moins, voire ne détériore pas les performances prédictives
   \end{itemize}
@@ -62,8 +62,8 @@
 
 \begin{frame}{Pour aller plus loin}
   \begin{itemize}
-    \item \bluelink{https://www.tensorflow.org/model\_optimization/guide/quantization/post\_training}{Guide sur la quantization post-entraînement}
-    \item \bluelink{https://www.tensorflow.org/model\_optimization/guide/quantization/training}{Guide sur l'entraînement adapté à la quantization}
+    \item \bluelink{https://www.tensorflow.org/model\_optimization/guide/quantization/post\_training}{Guide sur la quantification post-entraînement}
+    \item \bluelink{https://www.tensorflow.org/model\_optimization/guide/quantization/training}{Guide sur l'entraînement adapté à la quantification}
     \item \bluelink{https://www.tensorflow.org/lite/performance/model\_optimization}{Guide TF Lite d'optimisation}
   \end{itemize}
 \end{frame}
