Add some stuff to MLW ethics slides
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/mlops/intro/ethics.tex
+++ b/shared/latex/mlops/intro/ethics.tex
@@ -74,6 +74,25 @@
   L'approche \textit{Privacy by Design} permet de considérer ces aspects dès les tous premiers stades de conception.
 \end{frame}
 
+\begin{frame}{Les niveaux de préservation des données personnelles}
+  En plus de la sécurisation et des restrictions d'accès, les données personnelles peuvent principalement être~:
+  \begin{description}
+    \item[Pseudonymisées] Toute donnée personnelle est remplacée par un pseudonyme
+    \item[Anonymisées] Avec parfois une spécification $k$ de la taille minimale du groupe dans lequel on est anonyme
+  \end{description}
+
+  Ces processus ont un impact sur la manière d'entraîner et d'utiliser des modèles de ML.
+\end{frame}
+
+\begin{frame}{Bonnes pratiques}
+  Pour tous les aspects éthiques et réglementaires~:
+
+  \begin{itemize}
+    \item Intervenir au plus tôt (dès la récole de données)
+    \item Privéligier la mise en place de processus robustes plutôt que l'atteinte d'un but particulier
+  \end{itemize}
+\end{frame}
+
 \begin{frame}{Solutionnisme}
   Parfois, le seul moyen d'avoir un système éthique, c'est de \alert{ne pas} faire de ML.
 \end{frame}
