Add a few slides to MLW intro and lifecycle
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/mlops/intro/intro.tex
+++ b/shared/latex/mlops/intro/intro.tex
@@ -36,6 +36,17 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}{Niveaux de MLOps}
+  Grandes lignes~:
+  \begin{description}
+    \item[0] Processus manuels
+    \item[1] Chaînes de traitement automatisées
+    \item[2] CI/CD pour le ML
+  \end{description}
+
+  Le niveau 1 est bien exploré, pas le 2.
+\end{frame}
+
 \begin{frame}{État du domaine MLOps}
   \begin{itemize}
     \item Évolution rapide, beaucoup de bibliothèques concurrentes
