--- a/shared/latex/mlops/intro/ml-lifecycle.tex
+++ b/shared/latex/mlops/intro/ml-lifecycle.tex
@@ -9,5 +9,47 @@
     \item Déploiement
   \end{enumerate}
 
-  Chaque phase a sa « dette technique » qu'il convient de maîtriser.
+  Chaque phase a ses enjeux particuliers.
+\end{frame}
+
+\begin{frame}{1. Définition du périmètre projet}
+  Points cruciaux~:
+
+  \begin{itemize}
+    \item Délimitation de la tâche à accomplir
+    \item Définition des indicateurs de réussite
+    \item Budget en temps, personnel, etc
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{2. Gestion des données}
+  Points cruciaux~:
+
+  \begin{itemize}
+    \item Méthode non-biaisée de récolte des données
+    \item Définition des entrées et des sorties claire
+    \item Chaîne de traitement des données robuste sans disparité entraînement/production
+    \item Reproductibilité et gestion des expériences
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{3. Modélisation}
+  Points cruciaux~:
+
+  \begin{itemize}
+    \item Entraînement qui prend en compte les besoins de la production (taille du modèle, vitesse, etc)
+    \item Analyse des erreurs, souvent par tranches importantes des données
+    \item Reproductibilité et gestion des expériences
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{4. Déploiement}
+  Points cruciaux~:
+
+  \begin{itemize}
+    \item Passage à l'échelle
+    \item Détection des dérives des données et concepts
+    \item Monitoring
+    \item Processus de réentraînement
+  \end{itemize}
 \end{frame}
