Add a few slides for MLW
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/mlops/intro/ethics.tex
+++ b/shared/latex/mlops/intro/ethics.tex
@@ -85,14 +85,23 @@
 \end{frame}
 
 \begin{frame}{Bonnes pratiques}
-  Pour tous les aspects éthiques et réglementaires~:
+  Pour tous les aspects éthiques (et qui plus est réglementaires)~:
 
   \begin{itemize}
     \item Intervenir au plus tôt (dès la récole de données)
+    \item Encourager structurellement la diversité socioculturelle des équipes de ML
     \item Privéligier la mise en place de processus robustes plutôt que l'atteinte d'un but particulier
   \end{itemize}
 \end{frame}
 
 \begin{frame}{Solutionnisme}
   Parfois, le seul moyen d'avoir un système éthique, c'est de \alert{ne pas} faire de ML.
+\end{frame}
+
+\begin{frame}{Aller plus loin}
+  \begin{itemize}
+    \item \bluelink{https://aiethics.princeton.edu/case-studies/case-study-pdfs/}{Études de cas AI \& éthique de Princeton}
+    \item \bluelink{https://www.unesco.org/fr/artificial-intelligence/recommendation-ethics}{AI \& éthique par l'UNESCO}
+    \item \bluelink{https://www.telecom-paris.fr/fr/recherche/axes-strategiques/sciences-des-donnees-et-intelligence-artificielle/operational-ai-ethics/videotheque-ai-ethics}{Vidéothèque de l'équipe AI opérationnelle \& éthique de Télécom Paris}
+  \end{itemize}
 \end{frame}
