Add slides to MLW
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/mlops/data/processing/processing.tex
+++ b/shared/latex/mlops/data/processing/processing.tex
@@ -64,11 +64,18 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}{Solutions de chaînes de traitements — Tour de table}
+  \begin{itemize}
+    \item Quelles solutions utilisez-vous~?
+    \item Quels sont ses avantages et inconvénients~?
+  \end{itemize}
+\end{frame}
+
 \begin{frame}{Principales solutions de chaînes de traitements}
   Point fort de chaque solution~:
 
   \begin{description}
-    \item[\bluelink{https://www.tensorflow.org/tfx}{TFX}] Options de déploiement \& parité dev~/~prod
+    \item[\bluelink{https://www.tensorflow.org/tfx}{TFX}] Options de déploiement, parité dev~/~prod, performances
     \item[\bluelink{https://www.kubeflow.org/}{KubeFlow}] Intégration Kubernetes
     \item[\bluelink{https://dvc.org/}{DVC}] Reproductibilité \& solution «~low tech~»
     \item[\bluelink{https://mlflow.org/}{MLFlow}] Flexible, facile à adopter, supporté par les clouds
