--- a/shared/latex/mlops/modeling/error-analysis/intro.tex
+++ b/shared/latex/mlops/modeling/error-analysis/intro.tex
@@ -29,6 +29,12 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}{Tranches des données}
+  Idée popularisée par Apple dans son papier \textit{Overton: A Data System for Monitoring and Improving Machine-Learned Products} et \bluelink{https://www.snorkel.org/}{Snorkel}~:
+
+  \bluelink{https://www.snorkel.org/blog/slicing}{Très bon blog de Snorkel} sur le sujet.
+\end{frame}
+
 \begin{frame}{Approche conseillée — Exemple}
   Imaginons travailler sur un système de classification d'images.
 
