Improve MLW slides
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/mlops/data/definition/definition.tex
+++ b/shared/latex/mlops/data/definition/definition.tex
@@ -136,3 +136,15 @@
 
   → Des erreurs plus graves sont « cachées » par ces gains sur les HLPs.
 \end{frame}
+
+\begin{frame}{Documentation}
+  Pendant le processus de définition \& de calibrage, garder une trace des~:
+
+  \begin{itemize}
+    \item Biais potentiels des données que vous soupçonnez
+    \item Problèmes de couverture des données réelles
+    \item Enjeux réglementaires liés aux données
+  \end{itemize}
+
+  Ces informations sont cruciales pour bien documenter le modèle à terme.
+\end{frame}
