--- a/shared/latex/mlops/data/definition/definition.tex
+++ b/shared/latex/mlops/data/definition/definition.tex
@@ -70,7 +70,7 @@
 \begin{frame}{Données structurées~/~non-structurées}
   \begin{description}
     \item[Structurées] Dures à annoter pour des humains. Dures à augmenter
-    \item[Grand] Probablement faciles à annoter pour des humains. Souvent augmentables
+    \item[Non-structurées] Probablement faciles à annoter pour des humains. Souvent augmentables
   \end{description}
 \end{frame}
 
