Improve slides for MLW
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/mlops/production/monitoring/monitoring.tex
+++ b/shared/latex/mlops/production/monitoring/monitoring.tex
@@ -66,3 +66,14 @@
     \item La saturation
   \end{itemize}
 \end{frame}
+
+\begin{frame}{Mise en place}
+  Plusieurs solutions sont répandues~:
+
+  \begin{itemize}
+    \item \bluelink{https://www.evidentlyai.com/}{Evidently}
+    \item \bluelink{https://www.seldon.io/solutions/core-plus}{Seldon Core}
+    \item \bluelink{https://www.tensorflow.org/tfx/guide/exampleval?hl=fr}{TFX ExampleValidator}
+    \item \bluelink{https://docs.greatexpectations.io/docs/home/}{Great Expectations}
+  \end{itemize}
+\end{frame}
