refresh iao with light version

--- a/shared/latex/ml/intro.tex
+++ b/shared/latex/ml/intro.tex
@@ -88,16 +88,15 @@
 \begin{frame}{Points de vue}
   Beaucoup de façons de voir le machine learning. Basées sur~:
   \begin{itemize}[<+->]
+    \item les données (tabulaire, image, texte, vidéo, graphe, …)
     \item les paradigmes (supervisé, non supervisé, renforcement, en
       ligne, …)
+    \item les techniques (statistiques, symboliques, probabilistes, …)
     \item les modèles (arbres, grammaires, automates, réseaux de
       neurones …)
-    \item les données (tabulaire, image, texte, vidéo, graphe, …)
-    \item les techniques (statistiques, symboliques, probabilistes, …)
     \item les contraintes (real time, embarqué, big data, multilingue,
       …)
   \end{itemize}
-
   \onslide<+->{→ Domaine \textbf{extrêmement} vaste.}
 \end{frame}
 
@@ -116,19 +115,17 @@
 
 \begin{frame}{Conclusion}
   \begin{itemize}
-  \item le machine learning est un champ vaste.
+  \item le machine learning est un champ vaste
   \item il existe sûrement un modèle/paradigme pour vos besoins
   \end{itemize}
-  le nombre de contraintes/critères font qu'il n'y a pas de graphe de synthèse pour choisir une solution.
+  Le nombre de contraintes/critères font qu'il n'y a pas de graphe de synthèse pour choisir une solution.
 \end{frame}
 
 \begin{frame}{Discussion}
   \begin{itemize}
-  \item à quelles données allez-vous appliquer le machine learning ? À
-    quels besoins ?
-  \item aurez-vous besoin de modèles interprétables ou simplement très
-    performants en prédiction ?
-  \item quelles sont vos contraintes ?
+  \item À quelles données allez-vous appliquer le machine learning ? 
+  \item Pour quels besoins ?
+  \item Quelles sont vos contraintes ?
   \end{itemize}
 \end{frame}
 
