--- a/shared/latex/nn/rnn/demo.tex
+++ b/shared/latex/nn/rnn/demo.tex
@@ -4,14 +4,11 @@
     \item \bluelink{https://projector.tensorflow.org/}{Embeddings}
     \item \bluelink{https://karpathy.github.io/2015/05/21/rnn-effectiveness/}{Interprétation de réseaux récurrents}
     \item \bluelink{https://play.aidungeon.io/main/about}{AI Dungeon}
-    \item \bluelink{https://www.cleverbot.com/}{Clever Bot}
+    \item \bluelink{https://chat.openai.com/}{ChatGPT}
     \item
       \bluelink{https://colab.research.google.com/drive/1SXKZjiTpu7B4TaG75wXitMiDX5DGyVpp\#forceEdit=true&sandboxMode=true}{Reconnaissance d'auteur avec des RNNs}
       (\bluelink{https://colab.research.google.com/drive/1tTcEZ55g7dYbDkX2IWmJpvjBcKLbvBV9\#forceEdit=true&sandboxMode=true}{version TP})
-      \item
-      \bluelink{https://colab.research.google.com/drive/1pr-pJ4NxaxU-XCxm53RR6iDCq0KEqUs3\#forceEdit=true&sandboxMode=true}{Modèle de langage et génération de séquence — RNNs}
-      (\bluelink{https://colab.research.google.com/drive/1fL6j4ylF6Mbs7o9d0nLO8Y4LxA11uoBD\#forceEdit=true&sandboxMode=true}{version TP})
-      \item
+    \item
       \bluelink{https://colab.research.google.com/drive/1ux9dCSET_i9jlmejQdfakhda0JTVTTTW\#forceEdit=true&sandboxMode=true}{Modèle de langage et génération de séquence — Transformeurs}
       (\bluelink{https://colab.research.google.com/drive/1KHpTeKkGwuKHoWdgoXA_0jLmnbr-ZPLJ\#forceEdit=true&sandboxMode=true}{version TP})
   \end{itemize}
