--- a/shared/latex/supervised/trees.tex
+++ b/shared/latex/supervised/trees.tex
@@ -21,7 +21,7 @@
   Les arbres de décision
 
   \begin{itemize}
-    \item peuvent overfit les données, mais l'ensembling résoud ce problème
+    \item surapprentissage des données, mais les méthodes d'ensembles résoud ce problème
     \item sont sensibles aux déséquilibres de classe
   \end{itemize}
   $\Rightarrow$ Si les classes ne sont pas équilibrées, peut-être les ré-échantillonner.
