fancy tikz for shared/ml

--- a/shared/latex/ml/intro.tex
+++ b/shared/latex/ml/intro.tex
@@ -18,12 +18,20 @@
   \V{"tikz/ml/ml-ingenierie" | image("th", 0.75)}
 \end{frame}
 
+\begin{frame}{Matrice de confusion}
+  Montrer clairement quelles sont les erreurs faites par le modèle
+  \V{"img/confusion-matrix-nzmog" | image("th", 0.6)}
+\end{frame}
+
 \begin{frame}{Matière première~: les données}
-  On cherche une fonction qui a~:
-  \begin{itemize}
-    \item en entrée : N données en dimension D
-    \item en sortie : N sorties en dimension K
-  \end{itemize}
+  \begin{columns}
+    \begin{column}{.48\textwidth}
+      \V{"tikz/ml/data-unsupervised" | image("th", 0.6)}
+    \end{column}
+    \begin{column}{.52\textwidth}
+      \V{"tikz/ml/data-supervised" | image("th", 0.6)}
+    \end{column}
+  \end{columns}
 \end{frame}
 
 \begin{frame}{Matière première~: les données}
@@ -128,6 +136,5 @@
   \item Quelles sont vos contraintes ?
   \end{itemize}
 \end{frame}
-
 
 
