--- a/shared/latex/ml/learning.tex
+++ b/shared/latex/ml/learning.tex
@@ -20,12 +20,7 @@
 \end{frame}
 
 \begin{frame}{Séparation des données}
-  \begin{itemize}
-  \item ensemble d'entrainement
-  \item ensemble de validation pour mesurer la généralisation
-  \item ensemble de test (pour éviter le biais statistique)
-  \end{itemize}
-  → Split 60/20/20 habituel.
+  \V{"tikz/ml/train-valid-test-split" | image("tw", 0.9)}
 \end{frame}
 
 \begin{frame}{Régularisation}
