--- a/stys/formation.sty
+++ b/stys/formation.sty
@@ -377,8 +377,12 @@
 \definecolor{Auburn}{HTML}{9E2A2B}
 \definecolor{Rosewood}{HTML}{540B0E}
 \definecolor{applegreen}{HTML}{8DB600}
+\definecolor{Amethyst}{HTML}{8963BA}
+\definecolor{Xanthous}{HTML}{F3B61F}
+\definecolor{Lemonlime}{HTML}{DDF21F}
+\definecolor{Aureolin}{HTML}{F2E11F}
 
-
+\definecolor{Gamboge}{HTML}{F29E1F}
 \newcommand{\green}[1]{\textcolor{OliveGreen}{#1}}
 \newcommand{\red}[1]{\textcolor{BrickRed}{#1}}
 \newcommand{\blue}[1]{\textcolor{NavyBlue}{#1}}
@@ -435,6 +439,35 @@
   fill=applegreen,
   text=white,
   draw=applegreen!50}}
+
+
+\tikzset{data/.style={
+  minimum width=2cm,
+  minimum height=4cm,
+  rectangle,
+  rounded corners=3pt,
+  fill=mlambdablue,
+  text=white,
+  line width=0.5mm,
+  draw=mlambdablue!50}}
+\tikzset{lineM/.style={
+  minimum width=2cm,
+  minimum height=0.2mm,
+  rectangle,
+  rounded corners=1pt,
+  fill=applegreen,
+  text=white,
+  line width=0.5mm,
+  draw=applegreen!50}}
+\tikzset{columnM/.style={
+  minimum width=0.2mm,
+  minimum height=4cm,
+  rectangle,
+  rounded corners=1pt,
+  fill=Amethyst,
+  text=white,
+  line width=0.5mm,
+  draw=Amethyst!50}}
 
 \tikzset{hencoder/.style={
   minimum width=1cm,
