Skeleton for BDM and ML part
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/figures/tikz/tree/regression-en.tex
+++ b/figures/tikz/tree/regression-en.tex
@@ -5,12 +5,12 @@
 \begin{document}
   \begin{tikzpicture}
     \node [input,circle,minimum size=1.5cm] (Q) at (7, 7) {Quality};
-    \node [input,circle,minimum size=1.5cm] (S) at (3, 5) {Surface};
+    \node [input,circle,minimum size=1.5cm] (S) at (3, 5) {Area};
     \node [input,circle,minimum size=1.5cm] (G) at (11, 5) {Garage};
     \node [input,circle,minimum size=1.5cm] (GG) at (1, 2.5) {Garage};
     \node [input,circle,minimum size=1.5cm] (GGG) at (5, 2.5) {Garage};
-    \node [input,circle,minimum size=1.5cm] (SS) at (9, 2.5) {Surface};
-    \node [input,circle,minimum size=1.5cm] (SSS) at (13, 2.5) {Surface};
+    \node [input,circle,minimum size=1.5cm] (SS) at (9, 2.5) {Area};
+    \node [input,circle,minimum size=1.5cm] (SSS) at (13, 2.5) {Area};
     \node [output,circle,minimum size=1.4cm] (P1) at (0, 0) {780};
     \node [output,circle,minimum size=1.4cm] (P2) at (2, 0) {700};
     \node [output,circle,minimum size=1.4cm] (P3) at (4, 0) {350};
