--- a/shared/latex/en/nn/cnn/demo.tex
+++ b/shared/latex/en/nn/cnn/demo.tex
@@ -4,6 +4,7 @@
     \item \bluelink{https://reiinakano.com/arbitrary-image-stylization-tfjs/}{Styling}
     \item \bluelink{https://github.com/jiny2001/dcscn-super-resolution}{Super-resolution}
     \item \bluelink{https://richzhang.github.io/colorization/}{Colorization}
-    \item \bluelink{https://colab.research.google.com/drive/1Iw_dcr-tWVTc-6iK01_p6cMFTIVwc0lb\#forceEdit=true&sandboxMode=true}{CNNs with Keras on landscape data}
+    \item \bluelink{https://colab.research.google.com/drive/141PkJIc59QuaLTVar1LKQJklmyVZFHNZ\#forceEdit=true&sandboxMode=true}{CNNs with Keras on \texttt{landscape} data}
+    \item \bluelink{https://colab.research.google.com/drive/1tdOydMPsEYrjZEinP7MSSSFZFoDt0v83\#forceEdit=true&sandboxMode=true}{Image segmentation with Keras}
   \end{itemize}
 \end{frame}
