--- a/shared/latex/en/nn/cnn/tp-demo.tex
+++ b/shared/latex/en/nn/cnn/tp-demo.tex
@@ -2,9 +2,9 @@
   \begin{itemize}
     \item
       \bluelink{https://colab.research.google.com/drive/141PkJIc59QuaLTVar1LKQJklmyVZFHNZ\#forceEdit=true&sandboxMode=true}{CNNs with Keras on \texttt{landscape} data}
-      (\bluelink{https://colab.research.google.com/drive/1xLFNAWBJxmp0GBcRhmwKfZUbewBDq4hz\#forceEdit=true&sandboxMode=true}{TP version})
+      (\bluelink{https://colab.research.google.com/drive/1xLFNAWBJxmp0GBcRhmwKfZUbewBDq4hz\#forceEdit=true&sandboxMode=true}{Hands-on lab version})
     \item
       \bluelink{https://colab.research.google.com/drive/1tdOydMPsEYrjZEinP7MSSSFZFoDt0v83\#forceEdit=true&sandboxMode=true}{Image segmentation with Keras}
-      (\bluelink{https://colab.research.google.com/drive/15LRfTSaKEOh9nZHohagnJyXnMzweJQkY\#forceEdit=true&sandboxMode=true}{TP version})
+      (\bluelink{https://colab.research.google.com/drive/15LRfTSaKEOh9nZHohagnJyXnMzweJQkY\#forceEdit=true&sandboxMode=true}{Hands-on lab version})
   \end{itemize}
 \end{frame}
