Wrap up Data Science Project part of BDM
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/nn/cnn/demo.tex
+++ b/shared/latex/en/nn/cnn/demo.tex
@@ -6,5 +6,6 @@
     \item \bluelink{https://richzhang.github.io/colorization/}{Colorization}
     \item \bluelink{https://colab.research.google.com/drive/141PkJIc59QuaLTVar1LKQJklmyVZFHNZ\#forceEdit=true&sandboxMode=true}{CNNs with Keras on \texttt{landscape} data}
     \item \bluelink{https://colab.research.google.com/drive/1tdOydMPsEYrjZEinP7MSSSFZFoDt0v83\#forceEdit=true&sandboxMode=true}{Image segmentation with Keras}
+    \item \bluelink{https://colab.research.google.com/drive/120BO_I3Qf3Yj8lSRhPxY3R41DyICEc4-\#forceEdit=true&sandboxMode=true}{Reconstruction by inpainting for visual anomaly detection}
   \end{itemize}
 \end{frame}
