--- a/shared/latex/en/nn/generative/stable-diffusion.tex
+++ b/shared/latex/en/nn/generative/stable-diffusion.tex
@@ -1,12 +1,12 @@
 
-\begin{frame}{Principle}
+\begin{frame}{Stable Diffusion}
     \V{"img/stable-diffusion-principle" | image("tw", 1, "en")}
-\end{frame}
-
-\begin{frame}{Architecture}
-    \V{"img/stable-diffusion" | image("th", 0.7, "en")}
 \end{frame}
 
 \begin{frame}{Art Contest Winner}
     \V{"img/midjourney-win-art-contest" | image("tw", 0.95)}
+\end{frame}
+
+\begin{frame}{ChatGPT}
+  \bluelink{https://chat.openai.com/}{ChatGPT} uses \bluelink{https://jalammar.github.io/illustrated-transformer/}{transformer} neural networks.
 \end{frame}
