Small tweaks to mlops and ml parts of BDM
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/mlops/intro/intro-management.tex
+++ b/shared/latex/en/mlops/intro/intro-management.tex
@@ -1,5 +1,5 @@
-\begin{frame}{Data Science Project Management}
-  Tentative definition: iterative process to harness business value from data.
+\begin{frame}{Tentative definition}
+  Setting up \& managing iterative processes to harness business value from data.
 \end{frame}
 
 \begin{frame}{CRISP-DM}
