--- a/shared/latex/en/nn/rnn/demo.tex
+++ b/shared/latex/en/nn/rnn/demo.tex
@@ -6,5 +6,6 @@
     \item \bluelink{https://www.cleverbot.com/}{Clever Bot}
     \item \bluelink{https://colab.research.google.com/drive/1j-1snWxWpaCbSHPsbCj_Syo_u3loIdRa\#forceEdit=true&sandboxMode=true}{Author identification with RNNs}
     \item \bluelink{https://colab.research.google.com/drive/1jFW9TDiwIoRupGLgvjuJtOpSAyIEb6uZ\#forceEdit=true&sandboxMode=true}{Text generation}
+    \item \bluelink{https://colab.research.google.com/github/tensorflow/docs/blob/master/site/en/tutorials/structured_data/time_series.ipynb}{Time series forecasting}
   \end{itemize}
 \end{frame}
